[gd_scene load_steps=4 format=3 uid="uid://cy2qk1xwtdqef"]

[ext_resource type="Script" path="res://IU/actions.gd" id="1_d7d2s"]
[ext_resource type="Theme" uid="uid://i1mssgfgwv1q" path="res://IU/ui_breach.tres" id="2_ot16g"]

[sub_resource type="SystemFont" id="SystemFont_22fmt"]
font_names = PackedStringArray("Nirmala UI")
subpixel_positioning = 0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_vertical = 0
script = ExtResource("1_d7d2s")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2_ot16g")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Attack" type="Button" parent="HBoxContainer/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ot16g")
theme_override_fonts/font = SubResource("SystemFont_22fmt")
theme_override_font_sizes/font_size = 25
text = "Atacar
"

[node name="Special" type="Button" parent="HBoxContainer/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ot16g")
theme_override_fonts/font = SubResource("SystemFont_22fmt")
theme_override_font_sizes/font_size = 25
text = "Especial
"

[node name="Object" type="Button" parent="HBoxContainer/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ot16g")
theme_override_fonts/font = SubResource("SystemFont_22fmt")
theme_override_font_sizes/font_size = 25
text = "Objeto"

[node name="Guard" type="Button" parent="HBoxContainer/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ot16g")
theme_override_fonts/font = SubResource("SystemFont_22fmt")
theme_override_font_sizes/font_size = 25
text = "Guardia
"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="HBoxContainer2"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2_ot16g")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer2/Panel"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Special1" type="Button" parent="HBoxContainer2/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ot16g")
theme_override_fonts/font = SubResource("SystemFont_22fmt")
theme_override_font_sizes/font_size = 25
text = "Mov1
"

[node name="Special2" type="Button" parent="HBoxContainer2/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ot16g")
theme_override_fonts/font = SubResource("SystemFont_22fmt")
theme_override_font_sizes/font_size = 25
text = "Mov2
"

[node name="Special3" type="Button" parent="HBoxContainer2/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ot16g")
theme_override_fonts/font = SubResource("SystemFont_22fmt")
theme_override_font_sizes/font_size = 25
text = "Mov3"

[node name="Special4" type="Button" parent="HBoxContainer2/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ot16g")
theme_override_fonts/font = SubResource("SystemFont_22fmt")
theme_override_font_sizes/font_size = 25
text = "Mov4
"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="HBoxContainer3"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer3/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer3/Panel/MarginContainer"]
layout_mode = 2

[connection signal="button_down" from="HBoxContainer/Panel/MarginContainer/HBoxContainer/Attack" to="." method="_on_attack_button_down"]
[connection signal="button_down" from="HBoxContainer/Panel/MarginContainer/HBoxContainer/Special" to="." method="_on_special_button_down"]
